<resources>
    <string name="app_name">MiniProject</string>
    <string name="forget_password">Forget Password</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="Membership">You are not a member?</string>
    <string name="register">Register.</string>
    <string name="welcome">Welcome!</string>
    <string name="nice">Nice to see you again!</string>
    <string name="login">Login.</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="forget">Forget Password?</string>
    <string name="confirm">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="confirm_membership">Already a member?</string>
    <string name="hello_there">Hello there!</string>
    <string name="join_us">Join Us!</string>
    <string name="loginbtn">Login</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="wallet">Wallet</string>
    <string name="messages">Messages</string>
    <string name="groups">Groups</string>
</resources>