<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_dashboard"
        android:title="@string/home"
        android:icon="@drawable/explore_icon"/>

    <item
        android:id="@+id/bottom_nav_search"
        android:title="@string/search"
        android:icon="@drawable/search_icon"/>

    <item
        android:id="@+id/bottom_nav_wallet"
        android:title="@string/wallet"
        android:icon="@drawable/wallet_icon"/>

    <item
        android:id="@+id/bottom_nav_chat"
        android:title="@string/messages"
        android:icon="@drawable/messenger_icon"/>

    <item
        android:id="@+id/bottom_nav_community"
        android:title="@string/groups"
        android:icon="@drawable/community_icon"/>

</menu>